// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Schema Object — OpenAPI 3.1.0 §4.8.24.3 Examples > Model with Example > does not crash when schema includes \`example\` field (gracefully ignored) 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  streamResponse,
  ErrorResponse,
  errorResponse,
} from 'genoc/runtime';

export type Pet = { name?: string; tag?: string; };"
`;

exports[`Schema Object — OpenAPI 3.1.0 §4.8.24.3 Examples > Model with Example > does not crash when schema includes \`examples\` array (OpenAPI 3.1 style) 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  streamResponse,
  ErrorResponse,
  errorResponse,
} from 'genoc/runtime';

export type Color = string;"
`;

exports[`Schema Object — OpenAPI 3.1.0 §4.8.24.3 Examples > Model with Example > preserves description in JSDoc alongside example 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  streamResponse,
  ErrorResponse,
  errorResponse,
} from 'genoc/runtime';

/** A product in the catalog */
export type Product = { name?: string; };"
`;

exports[`Schema Object — OpenAPI 3.1.0 §4.8.24.3 Examples > Model with Map/Dictionary Properties > generates Record type for anonymous map without name (inline) 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  streamResponse,
  ErrorResponse,
  errorResponse,
} from 'genoc/runtime';

export type Container = { metadata?: Record<string, string>; };"
`;

exports[`Schema Object — OpenAPI 3.1.0 §4.8.24.3 Examples > Model with Map/Dictionary Properties > generates index signature alongside named properties 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  streamResponse,
  ErrorResponse,
  errorResponse,
} from 'genoc/runtime';

export type ExtendedMap = { id: string; } & { [key: string]: number; };"
`;

exports[`Schema Object — OpenAPI 3.1.0 §4.8.24.3 Examples > Model with Map/Dictionary Properties > generates index signature for additionalProperties with type 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  streamResponse,
  ErrorResponse,
  errorResponse,
} from 'genoc/runtime';

export type IntMap = { [key: string]: number; };"
`;

exports[`Schema Object — OpenAPI 3.1.0 §4.8.24.3 Examples > Models with Composition — allOf > generates intersection type combining base schema with extension 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  streamResponse,
  ErrorResponse,
  errorResponse,
} from 'genoc/runtime';

export type ErrorBase = { code: number; message: string; };

export type ExtendedError = ErrorBase & { detail?: string; };"
`;

exports[`Schema Object — OpenAPI 3.1.0 §4.8.24.3 Examples > Models with Composition — allOf > generates intersection type for allOf with inline objects only 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  streamResponse,
  ErrorResponse,
  errorResponse,
} from 'genoc/runtime';

export type Combined = { a?: string; } & { b?: number; };"
`;

exports[`Schema Object — OpenAPI 3.1.0 §4.8.24.3 Examples > Models with Composition — anyOf > generates union type for anyOf with mixed inline schemas 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  streamResponse,
  ErrorResponse,
  errorResponse,
} from 'genoc/runtime';

export type Flexible = string | number | boolean;"
`;

exports[`Schema Object — OpenAPI 3.1.0 §4.8.24.3 Examples > Models with Composition — anyOf > generates union type for anyOf with referenced schemas 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  streamResponse,
  ErrorResponse,
  errorResponse,
} from 'genoc/runtime';

export type Photo = { url?: string; };

export type Video = { duration?: number; };

export type Media = Photo | Video;"
`;

exports[`Schema Object — OpenAPI 3.1.0 §4.8.24.3 Examples > Models with Composition — oneOf > generates union type for oneOf with inline primitive schemas 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  streamResponse,
  ErrorResponse,
  errorResponse,
} from 'genoc/runtime';

export type StringOrNumber = string | number;"
`;

exports[`Schema Object — OpenAPI 3.1.0 §4.8.24.3 Examples > Models with Composition — oneOf > generates union type for oneOf with referenced schemas 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  streamResponse,
  ErrorResponse,
  errorResponse,
} from 'genoc/runtime';

export type Cat = { meow?: boolean; };

export type Dog = { bark?: boolean; };

export type Pet = Cat | Dog;"
`;

exports[`Schema Object — OpenAPI 3.1.0 §4.8.24.3 Examples > Polymorphism Support (basic) > generates base type and union of subtypes via oneOf 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  streamResponse,
  ErrorResponse,
  errorResponse,
} from 'genoc/runtime';

export type PetBase = { petType: string; };

export type Cat = PetBase & { meow?: boolean; };

export type Dog = PetBase & { bark?: boolean; };

export type Pet = Cat | Dog;"
`;

exports[`Schema Object — OpenAPI 3.1.0 §4.8.24.3 Examples > Primitive Sample > generates type alias for a boolean primitive schema 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  streamResponse,
  ErrorResponse,
  errorResponse,
} from 'genoc/runtime';

export type Active = boolean;"
`;

exports[`Schema Object — OpenAPI 3.1.0 §4.8.24.3 Examples > Primitive Sample > generates type alias for a string primitive schema 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  streamResponse,
  ErrorResponse,
  errorResponse,
} from 'genoc/runtime';

export type Status = string;"
`;

exports[`Schema Object — OpenAPI 3.1.0 §4.8.24.3 Examples > Primitive Sample > generates type alias for an integer primitive schema 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  streamResponse,
  ErrorResponse,
  errorResponse,
} from 'genoc/runtime';

export type Count = number;"
`;

exports[`Schema Object — OpenAPI 3.1.0 §4.8.24.3 Examples > Simple Model > generates interface with typed properties for a simple object model 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  streamResponse,
  ErrorResponse,
  errorResponse,
} from 'genoc/runtime';

export type User = { name: string; age?: number; };"
`;
